--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,7 +5,7 @@
                     <h2 class="section-heading">Contact Us</h2>
                     <h3 class="section-subheading text-muted">Question ? Please leave a message.</h3>
                     <br>
-                    <a href="mailto:singaporekairaleekalanilayam@gmail.com">singaporekairaleekalanilayam@gmail.com</a>
+                    <a href="mailto:we@kairaleekalanilayam.com">we@kairaleekalanilayam.com</a>
                 </div>
             </div>
             <!--
