--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
     {% include header.html %}
     {% include services.html %}
     {% include about.html %}
+      {% include team.html %}
     {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
