--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,15 @@
                     <br>
                     <a href="mailto:we@kairaleekalanilayam.com">we@kairaleekalanilayam.com</a>
                 </div>
+
+                <div class="col-lg-12 text-center"><br><br>
+                        <h4 class="section-heading">110, Faber Terrace Singapore, 129065</h2>
+                        
+                        
+                </div>
             </div>
+
+            
             <!--
             <div class="row">
                 <div class="col-lg-12">
