--- a/_includes/about.html
+++ b/_includes/about.html
@@ -24,61 +24,19 @@
                                     </p>
                                     <p class="text-muted">SKKN was very active in the 1950s through 1980s . With the unconditional support and restless efforts of the local talents, SKKN was able to stage about 250 Dramas in Singapore and Malaysia. In addition, prominent drama troupes from Kerala were invited by SKKN to stage their masterpiece dramas in Singapore. SKKN was privileged to be a part of the first ever National Day parade of independent Singapore.
                                     </p>
+                                    <p>
+                                            <strong><a href="{{site.url}}/about">Read More...</a></strong>
+                                        </p>
+
                                 </div>
                             </div>
                         </li>
+                       
+                        
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>2016</h4>
-                                    <h4 class="subheading">Relaunched SKKN</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Till the late 90s SKKN was active in the socio-cultural map of Singapore. After that due to the demographic changes it went to a sort of “hibernation” for a decade. Fortunately, with the encouraging efforts by a bunch of art lovers, SKKN was revived in 2016 and since then it is very active with quality productions. 
-                                    </p>
-                                    <p class="text-muted">Relaunched Singapore Kairalee Kala Nilayam in 2016 with new members during <b><a href="https://en.wikipedia.org/wiki/Pravasi_Express_Awards" target="_new">Pravasi Express Nite</a></b>. The function was followed by musical treat led by <b><a href="https://en.wikipedia.org/wiki/G._Venugopal" target="_new">G Venugopal</a></b> and drama - <b><a href="https://www.pravasiexpress.com/kannadi-a-reflection/" target="_new">Kannadi</a></b> by Singapore Kiralee Kala Nilayam Team.
-                                    </p>
-                                </div>
-                            </div>
-                        </li>
-                        <!--
-                        <li> 
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        -->
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of SKKN
-                                    <br>Contact Us</h4>
+                                <h4>
+                                    <br><a href="{{site.url}}/about" style="color: #000">Read More</a></h4>
                             </div>
                         </li>
                     </ul>
