--- a/_layouts/subpage.html
+++ b/_layouts/subpage.html
@@ -5,12 +5,11 @@
 
 
     <body id="page-top" class="index">
+
       {% include navbar.html %}
-      {% include header.html %}
-      {% include services.html %}
-      {% include portfolio_grid.html %}
-      {% include about.html %}   
-      {% include contact.html %}
+
+      {{ content }}
+
       {% include footer.html %}
       {% include modals.html %}
       {% include js.html %}
