--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -300,6 +300,41 @@ header .intro-text .intro-heading {
     line-height: 50px;
 }
 
+headwf20 {
+    text-align: center;
+    color: #fff;
+    background-attachment: scroll;
+    background-image: url('{{ site.baseurl }}/img/auditorium.jpg');
+    background-position: center center;
+    background-repeat: none;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+headwf20 .intro-text {
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+
+headwf20 .intro-text .intro-lead-in {
+    margin-bottom: 25px;
+    font-family: {{ site.data.template.font.secondary }};
+    font-size: 22px;
+    font-style: italic;
+    line-height: 22px;
+}
+
+headwf20 .intro-text .intro-heading {
+    margin-bottom: 25px;
+    text-transform: uppercase;
+    font-family: {{ site.data.template.font.primary }};
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 50px;
+}
+
 @media(min-width:768px) {
     header .intro-text {
         padding-top: 300px;
