--- a/_includes/header.1.html
+++ b/_includes/header.1.html
@@ -41,7 +41,7 @@
     </nav>
 
     <!-- Header -->
-    <header>
+    <headwf20>
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To The Pioneer</div>
@@ -50,7 +50,7 @@
                 <a href="#about" class="page-scroll btn btn-xl">Read More...</a>
             </div>
         </div>
-    </header>
+    </headwf20>
 <!--
         {% for page in site.pages %}
           {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
