--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,13 +3,13 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Question ? Please leave a message.</h3>
+                    <h3 class="section-subheading">Question ? Please leave a message.</h3>
                     <br>
                     <a href="mailto:we@kairaleekalanilayam.com">we@kairaleekalanilayam.com</a>
                 </div>
 
                 <div class="col-lg-12 text-center"><br><br>
-                        <h4 class="section-heading">110, Faber Terrace Singapore, 129065</h2>
+                        <h4 class="section-heading">110, Faber Terrace Singapore, 129065</h4>
                         
                         
                 </div>
