--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h2 class="section-subheading">Question ? Please leave a message.</h2>
+                    <h4 class="section-heading">Question ? Please leave a message.</h4>
                     <br>
                     <a href="mailto:we@kairaleekalanilayam.com">we@kairaleekalanilayam.com</a>
                 </div>
