--- a/_includes/womensday-wf-2020.html
+++ b/_includes/womensday-wf-2020.html
@@ -4,9 +4,9 @@
             <div class="intro-text">
                 <div class="intro-lead-in">WomensForum SKKN Presents, </div>               
                 <div class="intro-heading">Women of Tomorrow</div>
-                <div class="intro-lead-in">on March 8th @ UWSWA East Campus</div>
+                <div class="intro-lead-in">on March 8th @ UWCSWA East Campus</div>
                 <div class="intro-lead-in">Stay Tuned</div>
-                <a href="#" class="page-scroll btn btn-xl">Read More...</a>
+                <a href="mailto:womenswing@kairaleekalanilayam.com" class="page-scroll btn btn-xl">womenswing@kairaleekalanilayam.com</a>
             </div>
         </div>
     </header>
