--- a/_includes/womensday-wf-2020.html
+++ b/_includes/womensday-wf-2020.html
@@ -6,7 +6,7 @@
                 <div class="intro-heading">Women of Tomorrow</div>
                 <div class="intro-lead-in">on March 8th @ UWCSWA East Campus</div>
                 <div class="intro-lead-in">Stay Tuned</div>
-                <a href="mailto:womenswing@kairaleekalanilayam.com" class="page-scroll btn btn-xl">womenswing@kairaleekalanilayam.com</a>
+                <a href="mailto:womenswing@kairaleekalanilayam.com" class="page-scroll btn btn-xl">Contact</a>
             </div>
         </div>
     </header>
