--- a/_includes/womensday-wf-2020.html
+++ b/_includes/womensday-wf-2020.html
@@ -2,7 +2,7 @@
     <header style="background-image: url('{{ site.baseurl }}/img/auditorium.jpg');">
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">WomensForum SKKN Presents, </div>               
+                <div class="intro-lead-in">WomensWing SKKN Presents, </div>               
                 <div class="intro-heading">Women of Tomorrow</div>
                 <div class="intro-lead-in">on March 8th @ UWCSWA East Campus</div>
                 <div class="intro-lead-in">Stay Tuned</div>
