--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="{{site.url}}#page-top">{{site.title}}</a>
+                
+                    <a class="navbar-brand page-scroll" href="{{site.url}}#page-top">{{site.title}}</a>
+                <!--
+                <a class="navbar-brand page-scroll" href="{{site.url}}#page-top"><img src="img/logos/skkn-logo-white.png" height=50></a>
+                -->
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
