--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -182,8 +182,7 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-brand {
-    font-family: Montserrat,"Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
-    font-weight: 700;
+    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
     color: #{{ site.data.template.color.primary }};
 }
 
