--- a/_includes/womensday-wf-2020.html
+++ b/_includes/womensday-wf-2020.html
@@ -4,6 +4,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">SKKN Presents, </div>               
                 <div class="intro-heading">Women of Tomorrow</div>
+                <div class="intro-lead-in" style="font-size=20px;">where dreams take wings</div>
                 <div class="intro-lead-in">09.30 AM, March 8th @ UWCSEA East Campus</div>
                 <div class="intro-lead-in">Stay Tuned...</div>
                 <a href="mailto:womenswing@kairaleekalanilayam.com" class="page-scroll btn btn-xl">Contact</a>
