--- a/_includes/womensday-wf-2020.html
+++ b/_includes/womensday-wf-2020.html
@@ -1,9 +1,9 @@
     <!-- Header -->
-    <header style="background-image: url('{{ site.baseurl }}/img/auditorium.jpg'); margin-bottom: 10px;">
+    <header style="background-image: url('{{ site.baseurl }}/img/auditorium.jpg');">
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">SKKN Presents, </div>               
-                <div class="intro-heading">Women of Tomorrow</div>
+                <div class="intro-heading" style="margin-bottom: 10px;">Women of Tomorrow</div>
                 <div class="intro-lead-in" style="font-size=14px;">where dreams take wings</div>
                 <div class="intro-lead-in">09.30 AM, 8th March 2020</div>
                 <div class="intro-lead-in" style="font-size=20px;">UWCSEA East Campus</div>
