--- a/_includes/womensday-wf-2020.html
+++ b/_includes/womensday-wf-2020.html
@@ -4,9 +4,9 @@
             <div class="intro-text">
                 <div class="intro-lead-in">SKKN Presents, </div>               
                 <div class="intro-heading" style="margin-bottom: 10px;">Women of Tomorrow</div>
-                <div class="intro-lead-in" style="font-size=14px;">where dreams take wings</div>
+                <div class="intro-lead-in" style="font-size: 25px;">"where dreams take wings"</div>
                 <div class="intro-lead-in">09.30 AM, 8th March 2020</div>
-                <div class="intro-lead-in" style="font-size=20px;">UWCSEA East Campus</div>
+                <div class="intro-lead-in" style="font-size: 25px;">UWCSEA East Campus</div>
                 <div class="intro-lead-in">Stay Tuned...</div>
                 <a href="mailto:womenswing@kairaleekalanilayam.com" class="page-scroll btn btn-xl">Contact</a>
             </div>
