--- a/_includes/best-actor-2020.html
+++ b/_includes/best-actor-2020.html
@@ -2,7 +2,47 @@
     <header style="background-image: url('{{ site.baseurl }}/img/best-actor-stage.jpg');">
         <div class="container">
             <div class="intro-text" style="padding-top: 200px;">
+                <div class="intro-lead-in">SKKN Presents, </div>               
+                <div class="intro-heading" style="margin-bottom: 10px;">Kairalee <br>Best Actor</div>
                 <br>
+                <div class="intro-lead-in-malayalam" style="font-size: 25px; font-weight: 700;">Global Online Solo Acting Competition</div>
+                
+                <div class="intro-lead-in-malayalam">Send your entries today...</div>
+                <br>
+                
+                <a href="mailto:kairalibestactor@gmail.com" class="page-scroll btn btn-xl">Contact</a>
+            </div>
+        </div>
+    </header>
+
+    <header style="background-color: black; background-image: none">
+        <div class="container">
+            <div class="intro-text" style="padding-top: 50px;">
+                <div class="intro-lead-in-malayalam" style="font-size: 32px; text-align: left;">സിംഗപ്പൂര്‍ കൈരളി ബെസ്റ്റ് ആക്ടര്‍ കോമ്പറ്റീഷന്‍ - നിയമാവലികള്‍</div>
+                
+                <div class="intro-lead-in-malayalam" style="line-height: 36px; text-align: left;"> 
+<li> <strong>എസ്കെകെഎന്‍ ബെസ്റ്റ് ആക്ടര്‍</strong> പൂര്‍ണമായും ഒരു ഓണ്‍-ലൈന്‍ മത്സരം ആയിരിക്കും.</li>
+<li> ലോകത്തെവിടെയും ഉള്ള മത്സരാര്‍ത്ഥികള്‍ക്ക് ഇതില്‍ പങ്കെടുക്കാം.</li>
+<li> ഈ മത്സരത്തിന് പ്രായപരിധി, ലിംഗഭേദം എന്നിവ ബാധകമല്ല.</li>
+<li> കോമ്പറ്റീഷന് അയക്കുന്ന വീഡിയോയുടെ പരമാവധി ദൈര്‍ഘ്യം അഞ്ച് മിനുട്ട് ആണ്.</li>
+<li> ഇത് ഒരു എകാഭിനയ മത്സരമാണ്. എന്നാല്‍, ഒരു വീഡിയോയില്‍ തന്നെ, സിംഗിള്‍ കാരക്റ്റര്‍/ മള്‍ട്ടി-കാരക്റ്റര്‍/ തീം-ബേസ്ഡ്‌ എന്നിവയില്‍ ഏതെങ്കിലും ചെയ്യാവുന്നതാണ്.</li>
+<li> ഒരു തരത്തിലുള്ള എഡിറ്റിംഗ് ഉം ചെയ്യാത്ത വീഡിയോ ആണ് അയക്കേണ്ടത് (എഡിറ്റിംഗ് ചെയ്തവ പരിഗണിക്കിക്കില്ല. എന്നാല്‍ മള്‍ട്ടി-കാരക്റ്റര്‍/ തീം-ബേസ്ഡ്‌ എന്നിവ ചെയ്യുന്നവര്‍ക്ക് വീഡിയോ ഒന്നിച്ചു ചേര്‍ത്ത് ഒരു വീഡിയോ ആക്കി അയക്കാവുന്നതാണ്.)</li>
+<li> ഒരു മത്സരാര്‍ത്ഥിക്ക് ഒരു വീഡിയോ മാത്രമേ അയക്കാന്‍ പറ്റുകയുള്ളൂ.</li>
+<li> വീഡിയോ ഇന്‍-ഡോര്‍ / ഔട്ട്‌-ഡോര്‍ ഷൂട്ടിംഗ് ചെയ്യാവുന്നതാണ്.</li>
+<li> മത്സരത്തിനു ഏതു ഭാഷയിലുള്ള വിഡിയോയും അയക്കാവുന്നതാണ്.</li>
+<li> ടിക്ക് ടോക്/ മറ്റു റെകോര്‍ഡഡ്‌ ഓഡിയോ സ്വീകരിക്കുന്നതല്ല.</li>
+<li> ആവശ്യമെങ്കില്‍ പാശ്ചാത്തലസംഗീതം ഉപയൊഗിക്കാവുന്നതാണ്.</li>
+<li> വീഡിയോ തിരശ്ചീനമായി (horizontal) ഷൂട്ട്‌ ചെയ്യേണ്ടതാണ്.</li>
+<li> വിഡിയോ MP4/MOV  ഇവയില്‍ ഏതെങ്കിലും ഒരു ഫോര്‍മാറ്റില്‍ ആയിരിക്കണം.</li>
+<li> അയക്കുന്ന വീഡിയോയുടെ ഫയല്‍,  “NAME_BESTACTOR” എന്ന് ചേര്‍ക്കാന്‍ ശ്രദ്ധിക്കുക.</li>
+<li> വീഡിയോ അയക്കേണ്ട വിലാസം, kairalibestactor@gmail.com</li>
+<li> മത്സരത്തിന് ലഭിക്കുന്ന എന്ട്രികളുടെ അടിസ്ഥാനത്തില്‍ മത്സരത്തില്‍  വിവിധ ഘട്ടങ്ങള്‍ ഉണ്ടായേക്കാവുന്നതാണ്. ഇത് മത്സരാര്‍ത്ഥികളെ അതാതു സമയത്ത് അറിയിക്കുന്നതായിരിക്കും.</li>
+<li> മത്സരത്തില്‍ ആദ്യത്തെ മൂന്നു വിജയികള്‍ സമ്മാനാര്‍ഹാരായിരിക്കും.</li>
+<li> മത്സരത്തിന്റെ വിധിനിര്‍ണയം പൂര്‍ണമായും എസ്കെകെഎന്‍ ന്‍റെ ജഡ്ജിംഗ്പാ നലിന്‍റെ അധികാരപരിധിയില്‍ മാത്രം പെടുന്നതായിരിക്കും.</li>
+<li> മത്സരത്തിന്‍റെ നടത്തിപ്പില്‍ മാറ്റം വരുത്താനുള്ള അധികാരം എസ്കെ കെഎന്‍ ഇല്‍ മാത്രം നിക്ഷിപ്തമാണ്. </li>
+<li> എന്‍ട്രികള്‍ സ്വീകരിക്കുന്ന അവസാന തീയതി <strong>നവംബര്‍ 2020</strong> ആണ്.</li>
+
+</div>
                 <br>
                 <br>
                 <div class="intro-lead-in">SKKN Presents, </div>               
@@ -17,6 +57,8 @@
             </div>
         </div>
     </header>
+
+    
 <!--
         {% for page in site.pages %}
           {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
