--- a/_includes/best-actor-2020.html
+++ b/_includes/best-actor-2020.html
@@ -1,16 +1,25 @@
     <!-- Header -->
-    <header style="background-image: url('{{ site.baseurl }}/img/best-actor-stage.jpg');">
+    <header style="background-image: url('{{ site.baseurl }}/img/best-actor-stage.png');">
         <div class="container">
-            <div class="intro-text" style="padding-top: 200px;">
+            <div class="intro-text" style="padding-top: 200px; padding-bottom: 20px;">
                 <div class="intro-lead-in">SKKN Presents, </div>               
                 <div class="intro-heading" style="margin-bottom: 10px;">Kairalee <br>Best Actor</div>
                 <br>
                 <div class="intro-lead-in-malayalam" style="font-size: 25px; font-weight: 700;">Global Online Solo Acting Competition</div>
-                
-                <div class="intro-lead-in-malayalam">Send your entries today...</div>
+
+                <div class="intro-heading" style="font-size: 26px; font-weight: 700; line-height: 32px;">
+                    1st Prize : S$ 500 (25,000 INR)<br>
+                    2nd Prize : S$ 300 (15,000 INR)<br>
+                    3rd Prize : S$ 200 (10,000 INR)
+                    <div style="font-size: 16px;">And many attactive prizes and opportunities.....</div>
+                </div>
+
                 <br>
                 
-                <a href="mailto:kairalibestactor@gmail.com" class="page-scroll btn btn-xl">Contact</a>
+                <a href="mailto:kairalibestactor@gmail.com" class="page-scroll btn btn-xl" style="color: #000;">Send your entries today</a>
+                <div class="intro-heading" style="font-size: 16px; font-weight: 700; line-height: 32px;padding-top: 50px;">
+                    Deadline for entries submission has been extended to 30th Nov 2020. <br>See below for details.
+                </div>
             </div>
         </div>
     </header>
@@ -44,27 +53,11 @@
 
 </div>
                 <br>
-                <br>
-                <div class="intro-lead-in">SKKN Presents, </div>               
-                <div class="intro-heading" style="margin-bottom: 10px;">Kairalee <br>Best Actor</div>
-                <br>
-                <div class="intro-lead-in" style="font-size: 25px;">Global Online Solo Acting Competition</div>
+
                 
-                <div class="intro-lead-in">Send your entries today...</div>
-                <br>
-                
-                <a href="mailto:kairalibestactor@gmail.com" class="page-scroll btn btn-xl">Contact</a>
+                <a href="mailto:kairalibestactor@gmail.com" class="page-scroll btn btn-xl" style="color: #000;">Send your entries today</a>
             </div>
         </div>
     </header>
 
-    
-<!--
-        {% for page in site.pages %}
-          {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
-        {% endfor %}
-
-        <div class="intro-lead-in">09.30 AM, 8th March 2020</div>
-                <div class="intro-lead-in" style="font-size: 25px;">UWCSEA East Campus</div>
- -->
 
