--- a/_includes/best-actor-2020.html
+++ b/_includes/best-actor-2020.html
@@ -1,5 +1,5 @@
     <!-- Header -->
-    <header style="background-image: url('{{ site.baseurl }}/img/best-actor-stage.png');">
+    <header style="background-image: url('{{ site.baseurl }}/img/best-actor-stage.jpg');">
         <div class="container">
             <div class="intro-text" style="padding-top: 200px; padding-bottom: 20px;">
                 <div class="intro-lead-in">SKKN Presents, </div>               
@@ -26,7 +26,7 @@
 
     <header style="background-color: black; background-image: none">
         <div class="container">
-            <div class="intro-text" style="padding-top: 50px;">
+            <div class="intro-text" style="padding-top: 50px; padding-bottom: 80px;">
                 <div class="intro-lead-in-malayalam" style="font-size: 32px; text-align: left;">സിംഗപ്പൂര്‍ കൈരളി ബെസ്റ്റ് ആക്ടര്‍ കോമ്പറ്റീഷന്‍ - നിയമാവലികള്‍</div>
                 
                 <div class="intro-lead-in-malayalam" style="line-height: 36px; text-align: left;"> 
