--- a/_includes/best-actor-2020.html
+++ b/_includes/best-actor-2020.html
@@ -11,7 +11,7 @@
                     1st Prize : S$ 500 (25,000 INR)<br>
                     2nd Prize : S$ 300 (15,000 INR)<br>
                     3rd Prize : S$ 200 (10,000 INR)
-                    <div style="font-size: 16px;">And many attactive prizes and opportunities.....</div>
+                    <div style="font-size: 16px;">And many attractive prizes and opportunities.....</div>
                 </div>
 
                 <br>
