--- a/_includes/best-actor-2020.html
+++ b/_includes/best-actor-2020.html
@@ -1,7 +1,10 @@
     <!-- Header -->
+      
     <header style="background-image: url('{{ site.baseurl }}/img/best-actor-stage.jpg');">
+
         <div class="container">
             <div class="intro-text" style="padding-top: 200px; padding-bottom: 20px;">
+                
                 <div class="intro-lead-in">SKKN Presents, </div>               
                 <div class="intro-heading" style="margin-bottom: 10px;">Kairalee <br>Best Actor</div>
                 <br>
@@ -25,6 +28,7 @@
     </header>
 
     <header style="background-color: black; background-image: none">
+        {% include best-actor-2020-finals.html %}
         <div class="container">
             <div class="intro-text" style="padding-top: 50px; padding-bottom: 80px;">
                 <div class="intro-lead-in-malayalam" style="font-size: 32px; text-align: left;">സിംഗപ്പൂര്‍ കൈരളി ബെസ്റ്റ് ആക്ടര്‍ കോമ്പറ്റീഷന്‍ - നിയമാവലികള്‍</div>
@@ -61,3 +65,11 @@
     </header>
 
 
+    <div class="container-grid">  
+        <div>1</div>  
+        <div>2</div>  
+        <div>3</div>  
+        <div>4</div>  
+        <div>5</div>  
+        <div>6</div>  
+      </div>
