--- a/css/font-awesome/css/font-awesome.css
+++ b/css/font-awesome/css/font-awesome.css
@@ -2084,3 +2084,12 @@
 .fa-percent:before {
   content: "\f295";
 }
+
+
+/* --------- custom css for grid ----------------- */
+.container-grid {  
+  display: grid;  
+  grid-template-columns: 1fr 1fr 1fr;  
+  grid-template-rows: 50px 50px;  
+  background-color: aqua;
+}
