--- a/_includes/best-actor-2020.html
+++ b/_includes/best-actor-2020.html
@@ -28,7 +28,7 @@
     </header>
 
     <header style="background-color: black; background-image: none">
-        {% include best-actor-2020-finals.html %}
+        <!-- {% include best-actor-2020-finals.html %} -->
         <div class="container">
             <div class="intro-text" style="padding-top: 50px; padding-bottom: 80px;">
                 <div class="intro-lead-in-malayalam" style="font-size: 32px; text-align: left;">സിംഗപ്പൂര്‍ കൈരളി ബെസ്റ്റ് ആക്ടര്‍ കോമ്പറ്റീഷന്‍ - നിയമാവലികള്‍</div>
