--- a/_includes/latest.html
+++ b/_includes/latest.html
@@ -1,21 +1,14 @@
     <!-- Header -->
-    <header style="background-image: url('{{ site.baseurl }}/img/best-actor-stage.jpg');">
+    <header style="background-image: url('{{ site.baseurl }}/img/2021/kairalee-drama-fest-2021-background.png');">
         <div class="container">
             <div class="intro-text" style="padding-top: 200px; padding-bottom: 50px;">
-                <div class="intro-lead-in">SKKN Presents, </div>               
-                <div class="intro-heading" style="margin-bottom: 10px; ">Kairalee <br>Best Actor</div>
-                <br>
-                <div class="intro-lead-in-malayalam" style="font-size: 25px; font-weight: 700;">Global Online Solo Acting Competition</div>
+                <div class="intro-lead-in" style="font-style: normal;">SKKN Presents, </div>                 
+                <div class="intro-heading" style="margin-bottom: 10px;">Kairalee <br>Drama Festival</div>
+                <br><br><br>
+                <div class="intro-lead-in-malayalam" style="font-size: 25px; font-weight: 700;">3 Short Plays Every showing</div>
 
-                <div class="intro-heading" style="font-size: 26px; font-weight: 700; line-height: 32px;">
-                    1st Prize : S$ 500 (25,000 INR)<br>
-                    2nd Prize : S$ 300 (15,000 INR)<br>
-                    3rd Prize : S$ 200 (10,000 INR)
-                    <div style="font-size: 16px;">And many attractive prizes and opportunities.....</div>
-                </div>
-
-                <br>                
-                <a href="best-actor-2020" class="page-scroll btn btn-xl" style="color: #000;">Read More</a>
+                <br><br>
+                <a href="drama-fest-2021" class="page-scroll btn btn-xl" style="color: #000;">Read More</a>
         
             </div>
         </div>
