--- a/_includes/drama-fest-2021.html
+++ b/_includes/drama-fest-2021.html
@@ -10,7 +10,7 @@
                 <br>
                 <div class="intro-lead-in-malayalam" style="font-size: 25px; font-weight: 700;">3 Short Plays Every showing</div>
 
-                <div class="intro-heading" style="font-size: 38px; font-weight: 700; line-height: 32px; text-transform: none;">
+                <div class="intro-heading" style="font-size: 32px; font-weight: 700; line-height: 32px; text-transform: none;">
                     Biriyani
                     <div style="font-size: 28px; font-family: 'Manjari';font-weight: 700; line-height: 32px; color: #FFB8B8; padding-top: 15px; ">
                         "ബിരിയാണി"
@@ -22,19 +22,19 @@
                     </div>
                 </div>
                 
-                <div class="intro-heading" style="font-size: 38px; font-weight: 700; line-height: 32px;text-transform: none;">
-                   Vilikkathe Vannaval
-                   <div style="font-size: 28px; font-family: 'Manjari';font-weight: 700; line-height: 32px; color: #FFB8B8; padding-top: 15px; ">
-                        "Uninvited Guest / വിളിക്കാതെ വന്നവള്‍"
-                    </div>
-                    <div style="font-size: 26px; font-weight: 400; line-height: 32px; color: rgb(255, 255, 255);">
-                        Script: Omchery NN Pillai <br>
-                        Direction: D Sudheeran/ Binoop Nair
-                    </div>
+                <div class="intro-heading" style="font-size: 32px; font-weight: 700; line-height: 32px;text-transform: none;">
+                    Vilikkathe Vannaval
+                    <div style="font-size: 28px; font-family: 'Manjari';font-weight: 700; line-height: 32px; color: #FFB8B8; padding-top: 15px; ">
+                         "Uninvited Guest / വിളിക്കാതെ വന്നവള്‍"
+                     </div>
+                     <div style="font-size: 26px; font-weight: 400; line-height: 32px; color: rgb(255, 255, 255);">
+                         Script: Omchery NN Pillai <br>
+                         Direction: D Sudheeran/ Binoop Nair
+                     </div>
                 </div>
-
-                <div class="intro-heading" style="font-size: 38px; font-weight: 700; line-height: 32px;text-transform: none;">
-                    Ntuppuppaakkoraanendarnnu
+                
+                <div class="intro-heading" style="font-size: 32px; font-weight: 700; line-height: 32px;text-transform: none;">
+                    Ntuppuppaakko raanendarnnu
                     <div style="font-size: 28px; font-family: 'Manjari';font-weight: 700; line-height: 32px; color: #FFB8B8; padding-top: 15px; ">
                         "My Grandfather had an Elephant / ന്റുപ്പൂപ്പാക്കൊരാനേണ്ടാര്‍ന്ന്"
                     </div>
@@ -43,11 +43,8 @@
                         Script& Direction: MKV Rajesh
                     </div>
                 </div>
-                
 
-
-                <br>
-                
+                <br><br>
                 <a href="mailto:kairalibestactor@gmail.com" class="page-scroll btn btn-xl" style="color: #000;">Contact</a>
                 <div class="intro-heading" style="font-size: 16px; font-weight: 400; line-height: 32px;padding-top: 50px;">
                     +65 97366173 / +65 82339012 <br>
@@ -56,15 +53,3 @@
             </div>
         </div>
     </header>
-
-
-
-
-    <div class="container-grid">  
-        <div>1</div>  
-        <div>2</div>  
-        <div>3</div>  
-        <div>4</div>  
-        <div>5</div>  
-        <div>6</div>  
-      </div>
