--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -182,7 +182,7 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-brand {
-    font-family: "Rubic", "Helvetica Neue",Helvetica,Arial,cursive;
+    font-family: "Kaushan Script", "Rubic", "Helvetica Neue",Helvetica,Arial,cursive;
     font-weight: 700;
     /*color: #{{ site.data.template.color.primary }};*/
 }
