--- a/_includes/drama-fest-2021.html
+++ b/_includes/drama-fest-2021.html
@@ -9,7 +9,15 @@
                 <div class="intro-heading" style="margin-bottom: 10px;">Kairalee <br>Drama Festival</div>
                 <br>
                 <div class="intro-lead-in-malayalam" style="font-size: 25px; font-weight: 700;">3 Short Plays Every showing</div>
+                
+                <div class="intro-heading" style="font-size: 32px; font-weight: 700; line-height: 32px; text-transform: none;">
+                    <div style="font-size: 22px; font-weight: 700; line-height: 32px; color: #FFB8B8; padding-top: 15px; ">
+                        7, 8, 9 May 2021, 6.30-9.00 PM <br>
+                        Goodman Arts Centre, 90 Goodman Rd, <br> Singapore 439053
+                    </div>
 
+                </div>
+                
                 <div class="intro-heading" style="font-size: 32px; font-weight: 700; line-height: 32px; text-transform: none;">
                     Biriyani
                     <div style="font-size: 22px; font-family: 'Manjari';font-weight: 700; line-height: 32px; color: #FFB8B8; padding-top: 15px; ">
