--- a/_includes/drama-fest-2021.html
+++ b/_includes/drama-fest-2021.html
@@ -1,6 +1,6 @@
     <!-- Header -->
       
-    <header style="background-image: url('{{ site.baseurl }}/img/2021/kairalee-drama-fest-2021-background.png');">
+    <header style="background-image: url('{{ site.baseurl }}/img/2021/kairalee-drama-fest-2021-background.png'); background-position: center top;">
 
         <div class="container">
             <div class="intro-text" style="padding-top: 200px; padding-bottom: 20px;">
