--- a/_includes/drama-fest-2021.html
+++ b/_includes/drama-fest-2021.html
@@ -56,7 +56,7 @@
                 <a href="mailto:kairalibestactor@gmail.com" class="page-scroll btn btn-xl" style="color: #000;">Contact</a>
                 <div class="intro-heading" style="font-size: 16px; font-weight: 400; line-height: 32px;padding-top: 50px;">
                     +65 97366173 / +65 82339012 <br>
-                    Contact for more details, ticker and sponsorships.
+                    Contact for more details, tickets and sponsorships.
                 </div>
             </div>
         </div>
