--- a/_includes/latest.html
+++ b/_includes/latest.html
@@ -2,13 +2,15 @@
     <header style="background-image: url('{{ site.baseurl }}/img/2021/kairalee-drama-fest-2021-background.png');">
         <div class="container">
             <div class="intro-text" style="padding-top: 200px; padding-bottom: 50px;">
-                <div class="intro-lead-in" style="font-style: normal;">SKKN Presents, </div>                 
-                <div class="intro-heading" style="margin-bottom: 10px;">Kairalee <br>Drama Festival</div>
+                <div class="intro-lead-in" style="font-style: normal;">SKKN Presents</div>                 
+                <div class="intro-text" style="padding-top: 20px;"><img src="assets/images/drama-2023/Anthithottam_Poster3_small-cropped.png" width="100%"><br>
+                
+                <!-- <div class="intro-heading" style="margin-bottom: 10px;">Kairalee <br>Drama Festival</div>
                 <br><br><br>
-                <div class="intro-lead-in-malayalam" style="font-size: 25px; font-weight: 700;">3 Short Plays Every showing</div>
+                <div class="intro-lead-in-malayalam" style="font-size: 25px; font-weight: 700;">3 Short Plays Every evening</div> -->
 
                 <br><br>
-                <a href="drama-fest-2021" class="page-scroll btn btn-xl" style="color: #000;">Read More</a>
+                <a href="drama-anthithottam-2023" class="page-scroll btn btn-xl" style="color: #000;">Read More</a>
         
             </div>
         </div>
