--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To The Pioneer</div>
-                <div class="intro-heading">Indian Art House</div>
-                <div class="intro-lead-in">of Singapore</div>
+                <div class="intro-lead-in" style="text-shadow: 3px 3px 4px #000000;">Welcome To The Pioneer</div>
+                <div class="intro-heading" style="text-shadow: 3px 3px 4px #000000;">Indian Art House</div>
+                <div class="intro-lead-in" style="text-shadow: 3px 3px 4px #000000;">of Singapore</div>
                 <a href="#about" class="page-scroll btn btn-xl">Read More...</a>
             </div>
         </div>
