--- a/_includes/drama-anthithottam-2023.html
+++ b/_includes/drama-anthithottam-2023.html
@@ -22,6 +22,21 @@
                     </div>
                 </div>
             
+                <div class="intro-heading" style="font-size: 66px; font-family: 'Manjari';font-weight: 700; line-height: 32px; text-transform: none; padding-top: 0px;">
+                    
+                    <div style="font-size: 20px; font-weight: 400; padding-top: 10px; line-height: 32px; color: rgb(255, 255, 255);">
+                        Singapore Kairalee Kala Nilayam’s latest drama “Anthithottam: The Final Act” is an amalgamation of Malayalam, English, German and French languages with the true story of the main protagonist who arrived in France from Mayyazhi (now Mahi) which was then a prominent French Protectorate on the Malabar coast of Northern Kerala in French Indian colony. As an active undercover member of French Resistance, he rebelled and repulsed the neo imperial regime forced upon the French citizens. He was arrested and incarcerated in the Fort Romainville, the transit camp run by the Nazi regime in Paris for the prisoners and enemies of Nazi Germany.
+                    </div>
+
+                    <div style="font-size: 20px; font-weight: 400; padding-top: 40px; line-height: 32px; color: rgb(255, 255, 255);">
+                        As the main protagonist faces torture and moribund in a concentration camp, he travels through his inner life and opens the door to his past memories. Of modern drama with a different style, Directed by Mr. Sreekanth Menon, a member of the Kairalee Kala Nilayam and written by Mr. Anil Rohit. Anthithottam: The final Act – An unprecedented drama that showcase the exciting story of Madhavan in background of world war 2. A Big Shout out to all theatre lovers to come and watch the play on 17, 18, & 19th March 2023 at Good Man Art Centre
+                    </div>
+                </div>
+
+                
+
+
+            
                 <div class="intro-heading" style="font-size: 32px; font-weight: 700; line-height: 32px; text-transform: none;">
                     <div style="font-size: 22px; font-weight: 700; line-height: 32px; color: #FFB8B8; padding-top: 0px; ">
                         17, 18, 19 March 202, 6.30 PM <br>
