--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,7 +14,25 @@
                         <i class="fa fa-file-movie-o fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">SKKF</h4>
-                    <p class="text-muted"><b>Singapore Kairalee Film Forum</b> is an initiative to promote talents in filma making.</p>
+                    <p class="text-muted">
+                        The Singapore Kairalee Film Forum is an innovative initiative aimed at promoting talented filmmakers and fostering a creative community in Singapore. This forum is dedicated to showcasing the best of Indian cinema in Singapore and providing a platform for talented filmmakers to showcase their work.
+                    
+                    </p>
+                    <p class="text-muted">
+                        The Film Forum has already made significant strides in this direction. Over the past few years, the forum has produced a number of outstanding short films that have been well-received by audiences in Singapore and beyond. These short films have been praised for their compelling stories, excellent production values, and innovative approach to filmmaking.
+                    </p>
+                    <p class="text-muted">
+                        What sets the Singapore Kairalee Film Forum apart is its focus on supporting local talent. The forum provides an opportunity for aspiring filmmakers to hone their skills and showcase their work to a wider audience. The forum also organizes workshops, seminars, and networking events to help filmmakers connect with like-minded individuals and build their careers in the film industry.
+                    </p>
+                    <p class="text-muted">
+                        The short films produced by the Singapore Kairalee Film Forum cover a diverse range of topics, from personal stories of triumph and struggle to thought-provoking social commentary on issues such as discrimination and inequality. These films have resonated with audiences across cultural and linguistic boundaries, highlighting the universal appeal of cinema as a medium for storytelling and artistic expression.
+                    </p>
+                    <p class="text-muted">
+                        One of the keys to the success of the Singapore Kairalee Film Forum has been its commitment to fostering a supportive and collaborative community of filmmakers. The forum has brought together individuals from diverse backgrounds and experiences, creating a space where they can learn from one another, collaborate on projects, and push the boundaries of what is possible in Indian cinema.
+                    </p>
+                    <p class="text-muted">
+                        Overall, the Singapore Kairalee Film Forum is an inspiring example of how a dedicated group of individuals can come together to create something truly special. Through their innovative and thought-provoking short films, they have succeeded in capturing the imagination of audiences and showcasing the immense talent and creativity of the Indian community in Singapore.
+                    </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -22,7 +40,20 @@
                         <i class="fa fa-globe fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Heritage Project</h4>
-                    <p class="text-muted">This initiate is for to document and feature the rich Indian art and cultture of Singapore. More details to come, stay tuned.</p>
+                    <p class="text-muted">
+                        The Heritage Project is a significant effort to preserve and promote the vibrant Indian art and culture that has thrived in Singapore for centuries. This initiative seeks to document and showcase the unique aspects of this rich heritage through various mediums, including photographs, videos, exhibitions, and interactive displays.</p>
+                    <p class="text-muted">
+                        The Indian community in Singapore has a long and fascinating history, with its roots dating back to the colonial era when Indian laborers were brought to the island to work on the plantations. Over time, this community grew and flourished, creating a rich tapestry of cultural traditions that are still celebrated and cherished today.
+                    </p>
+                    <p class="text-muted">
+                        The Heritage Project seeks to capture this unique cultural legacy and make it accessible to all. It will provide an opportunity for people to learn about the rich history, art, and customs of Singapore's Indian community, and to appreciate the contributions they have made to the country's cultural fabric.
+                    </p>
+                    <p class="text-muted">
+                        Through the Heritage Project, visitors will be able to explore the vibrant and diverse cultural traditions of the Indian community in Singapore, from their music and dance to their fashion and cuisine. They will also have the chance to interact with members of the community and learn about their experiences, stories, and customs.
+                    </p>
+                    <p class="text-muted">   
+                        The Heritage Project is an exciting initiative that promises to celebrate the unique cultural heritage of Singapore's Indian community and to promote greater understanding and appreciation of this rich and diverse cultural legacy. Stay tuned for more updates on this exciting project.
+                    </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -30,7 +61,21 @@
                         <i class="fa fa-connectdevelop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Community Engagement</h4>
-                    <p class="text-muted">We have a series of community engagement programs in pipeline.</p>
+                    <p class="text-muted">
+                        SKKN is a vibrant organization dedicated to promoting Indian culture and literature in Singapore. Over the years, SKKN has organized several community events that have been hugely successful in bringing together members of the Indian community and promoting cross-cultural understanding.
+                    </p>
+                    <p class="text-muted">
+                        From traditional dance performances and musical recitals to literary festivals and workshops, SKKN's community events have covered a wide range of cultural and literary activities. These events have been designed to cater to people of all ages and backgrounds, providing a platform for them to come together, learn from one another, and celebrate the richness and diversity of Indian culture.
+                    </p>
+                    <p class="text-muted">
+                        One of the key factors behind the success of SKKN's community events has been their focus on engagement and participation. SKKN has always believed in the power of community participation and collaboration to create a shared sense of ownership and investment in cultural events. By involving members of the community in the planning and execution of these events, SKKN has been able to create a sense of community ownership and pride that has helped to sustain these events over the years.
+                    </p>
+                    <p class="text-muted">
+                        Looking to the future, SKKN has a series of exciting community engagement programs in the pipeline. These programs will focus on building bridges between different communities in Singapore and promoting greater cultural exchange and understanding. From cultural exchange programs to community outreach initiatives, SKKN's future plans are designed to create meaningful connections and opportunities for all members of the community.
+                    </p>
+                    <p class="text-muted">
+                        Overall, SKKN's commitment to promoting Indian culture and literature in Singapore through community engagement programs and events is truly inspiring. Through their efforts, they have succeeded in creating a space where people of all backgrounds can come together, learn from one another, and celebrate the richness and diversity of Indian culture in Singapore.
+                    </p>
                 </div>
             </div>
         </div>
