--- a/_includes/team-2022.html
+++ b/_includes/team-2022.html
@@ -11,8 +11,8 @@
                 {% for member in site.people %}
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team-2023/{{ member.pic }}" class="img-responsive img-circle" alt="">
-                        <h4>{{ member.name }}</h4> 
+                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
+                        <h4>{{ member.name }}</h4>
                         <p class="text-muted2">{{ member.position }}</p>
                         <ul class="list-inline social-buttons">
                             {% for network in member.social %}
