--- a/_includes/about_long.html
+++ b/_includes/about_long.html
@@ -50,9 +50,11 @@
                 
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Be Part
+                                <h4>
+                                    Be Part
                                     <br>Of SKKN
-                                    <br>Contact Us</h4>
+                                    <!-- <br>Contact Us -->
+                                </h4>
                             </div>
                         </li>
                     </ul>
