--- a/_includes/drama-y.html
+++ b/_includes/drama-y.html
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="intro-text" style="padding-top: 200px; padding-bottom: 20px;">
                 
-                <div class="intro-lead-in" style="font-style: normal;">Singapore Kairalee Kala Nilayam Presents, </div>  
+                <div class="intro-lead-in" style="font-style: normal;">SKKN Presents, </div>  
                 
                 <div class="intro-heading" style="font-size: 66px; font-family: 'Manjari';font-weight: 700; line-height: 32px; text-transform: none; padding-top: 40px;">
                     അന്തിത്തോറ്റം
@@ -31,14 +31,11 @@
                     <div style="font-size: 20px; font-weight: 400; padding-top: 40px; line-height: 32px; color: rgb(255, 255, 255);">
                         As the main protagonist faces torture and moribund in a concentration camp, he travels through his inner life and opens the door to his past memories. Of modern drama with a different style, Directed by Mr. Sreekanth Menon, a member of the Kairalee Kala Nilayam and written by Mr. Anil Rohit. Anthithottam: The final Act – An unprecedented drama that showcase the exciting story of Madhavan in background of world war 2. A Big Shout out to all theatre lovers to come and watch the play on 17, 18, & 19th March 2023 at Good Man Art Centre
                     </div>
-                    
-                    <div style="font-size: 20px; font-weight: 400; padding-top: 40px; line-height: 32px; color: rgb(255, 255, 255);">
-                        Also read <a style="color: #ebff11;" href="https://www.pravasiexpress.com/anthithottam-the-final-act-tells-story-of-forgotten-indian-hero-was-executed-by-the-nazis-during-world-war-2/" targrt="_blank">“Anthithottam: The Final Act” tells story of Forgotten Indian Hero Was Executed by The Nazis during World War 2</a>, review by Manoj ABS on <a style="color: #ebff11;"  href="https://www.pravasiexpress.com/" target="_blank">PravasiExpress</a>.
-                    </div>
                 </div>
 
                 
-                
+
+
             
                 <div class="intro-heading" style="font-size: 32px; font-weight: 700; line-height: 32px; text-transform: none;">
                     <div style="font-size: 22px; font-weight: 700; line-height: 32px; color: #FFB8B8; padding-top: 0px; ">
@@ -47,7 +44,7 @@
                     </div>
                 </div>                
 
-                <!-- <a href="https://singaporekairaleekalanilayam.peatix.com/" class="page-scroll btn btn-xl" style="color: #000;" target="_blank">Book Ticket</a> -->
+                <a href="https://singaporekairaleekalanilayam.peatix.com/" class="page-scroll btn btn-xl" style="color: #000;" target="_blank">Book Ticket</a>
                 
                 <div class="intro-heading" style="font-size: 16px; font-weight: 400; line-height: 32px;padding-top: 50px;">
                     Contact: +65 96315634 / +65 97521153 / +65 82283873<br>
