--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -10,20 +10,22 @@
             <div class="row">
             {% for post in site.posts %}
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <!-- <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal"> -->
-                        <!-- <div class="portfolio-hover">
+                    <!-- <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal"> 
+                        <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div> -->
-                        <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
-                    </a>
+                        {% if post.endurl %}<a href="{{ post.endurl }}">{% endif %}
+                        <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="" style="width: 360px; height: 260px;">
+                        {% if post.endurl %}</a>{% endif %}
+                    <!-- </a> -->
                     <div class="portfolio-caption"> 
                         <h4>{{ post.title }}</h4>
                         <p class="text-muted">{{ post.subtitle }}</p> 
                     </div>
                 </div>
-            {% endfor %}
+            {% endfor %} 
             </div>
         </div> 
     </section>
