--- a/_includes/team.html
+++ b/_includes/team.html
@@ -29,6 +29,9 @@
                 {% endfor %}
             </div>
             
+            <center>
+            <a href="team-2022">2022 COMMITTEE</a>
+            </center>
             <!--
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -37,4 +40,5 @@
             </div>
             -->
         </div>
+        
     </section>
