--- a/_includes/team-2022.html
+++ b/_includes/team-2022.html
@@ -3,25 +3,25 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
+                    <h2 class="section-heading">2022 Committee</h2>
                     <h3 class="section-subheading text-muted">&nbsp;</h3>
                 </div>
             </div>
             <div class="row">
-                {% for member in site.people %}
+                {% for member in site.people2022 %}
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
+                        <!-- <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt=""> -->
                         <h4>{{ member.name }}</h4>
                         <p class="text-muted2">{{ member.position }}</p>
                         <ul class="list-inline social-buttons">
-                            {% for network in member.social %}
+                            <!-- {% for network in member.social %}
                             <li>
                                 <a href="{{ network.url }}">
                                     <i class="fa fa-{{ network.title }}"></i>
                                 </a>
                             </li>
-                            {% endfor %}
+                            {% endfor %} -->
 
                         </ul>
                     </div>
